--- a/src/admin/home/home.css
+++ b/src/admin/home/home.css
@@ -116,8 +116,10 @@
 }
 
 .stats-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
     margin-bottom: 30px;
 }
@@ -126,6 +128,7 @@
     background: white;
     border-radius: 10px;
     padding: 20px;
+    width: 300px;
     display: flex;
     align-items: center;
     gap: 15px;
@@ -141,6 +144,20 @@
     justify-content: center;
     font-size: 24px;
 }
+
+.chartTitle{
+    text-align: center;
+    margin: 0px;
+}
+
+#myChart {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
 
 .profile-views {
     background-color: #e8f0fe;
@@ -174,21 +191,3 @@
     color: #202124;
 }
 
-.chart-container {
-    background: white;
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-}
-
-.chart-container h2 {
-    color: #202124;
-    margin-bottom: 20px;
-    font-size: 18px;
-}
-
-canvas {
-    width: 100% !important;
-    height: 300px !important;
-}
