--- a/src/admin/users/user.css
+++ b/src/admin/users/user.css
@@ -13,6 +13,14 @@
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
+.margin{
+    margin: 30px;
+}
+
+.marginDua{
+    margin-top: 100px;
+}
+
 .brand {
     color: white;
     font-size: 1.5rem;
@@ -66,7 +74,6 @@
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-/* Font Awesome style simulation */
 .icon {
     display: inline-block;
     width: 14px;
@@ -111,6 +118,7 @@
 }
 
 .stats-container {
+    padding: 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
@@ -194,7 +202,7 @@ body {
     background-color: #f5f5f5;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+
 }
 
 body .container-utama{
@@ -207,7 +215,7 @@ body .container-utama{
     margin-bottom: 70px;
 }
 table {
-    width: 100%;
+    width: 80%;
     border-collapse: collapse;
 }
 
