--- a/src/home-before-login/about/aboutUs.css
+++ b/src/home-before-login/about/aboutUs.css
@@ -20,6 +20,7 @@ html {
   width: 100%;
   top: 0;
   overflow: hidden;
+  z-index: 2;
 }
 
 .menu-icon {
@@ -260,16 +261,11 @@ li a:hover::after {
   flex-direction: column;
 }
 
-.card-image {
+.card img {
+  padding: 10px;
   width: 100%;
-  height: 200px;
-  overflow: hidden;
-}
-
-.card-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; 
+  height: auto;
+  object-fit: contain;
 }
 
 .card-content {
